--- a/EX2.1/app/src/main/res/layout/activity_main.xml
+++ b/EX2.1/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,10 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:text="ditiseentest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" tools:layout_editor_absoluteY="236dp"
+            tools:layout_editor_absoluteX="167dp" android:id="@+id/textViewTest"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
