Created a get request to a public quote api to show a quote (text) in the quoteFragment

--- a/MyMemory/app/src/main/res/layout/fragment_quote.xml
+++ b/MyMemory/app/src/main/res/layout/fragment_quote.xml
@@ -1,5 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+
+        <variable
+                name="quoteViewModel"
+                type="com.example.mymemory.ui.QuoteViewModel" />
+    </data>
+<RelativeLayout
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -8,12 +14,16 @@
                 android:id="@+id/quoteFragment"
                 tools:context=".fragments.QuoteFragment" >
 
+
+
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:id="@+id/quoteTxt"/>
+            android:id="@+id/quoteTxt"
+            android:text="@{quoteViewModel.quoteText}"/>
 
 </RelativeLayout>
+</layout>
