--- a/MyMemory/app/src/main/res/layout/activity_main.xml
+++ b/MyMemory/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".activities.MainActivity">
+    <!--
+    TODO: link to create a memory
+     -->
     <Button
             android:text="@string/create_memory"
             android:layout_width="wrap_content"
@@ -14,14 +17,21 @@
             android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
             android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent"/>
+    <!--
+    This opens the list of memories in a recyclerview
+     -->
     <Button
-            android:text="@string/find_memory"
+            android:text="@string/memories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/findMemoryBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/createMemoryBtn" app:layout_constraintHorizontal_bias="0.498"/>
+            app:layout_constraintTop_toBottomOf="@+id/createMemoryBtn" app:layout_constraintHorizontal_bias="0.498"
+            android:onClick="launchMemoryListActivity"/>
+    <!--
+    This opens an activity that shows the quote of the day
+     -->
     <Button
             android:text="@string/quote"
             android:layout_width="wrap_content"
