--- a/MyMemory/app/src/main/res/values/colors.xml
+++ b/MyMemory/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="blue_grey_800_50p">#E237474F</color>
 </resources>
