--- a/MyMemory/app/src/main/res/layout/activity_memory_detail.xml
+++ b/MyMemory/app/src/main/res/layout/activity_memory_detail.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center_vertical|start"
             android:layout_margin="@dimen/fab_margin"
             app:layout_anchor="@+id/memory_detail_container"
-            app:layout_anchorGravity="top|end"
-            app:srcCompat="@android:drawable/stat_notify_chat" />
+            app:layout_anchorGravity="bottom|end"
+            app:srcCompat="@android:drawable/ic_input_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
