--- a/MyMemory/app/src/main/res/layout/activity_add_memory.xml
+++ b/MyMemory/app/src/main/res/layout/activity_add_memory.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
-xmlns:app="http://schemas.android.com/apk/res-auto"
+android:orientation="vertical"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".activities.AddMemoryActivity">
+android:padding="16dp">
 
-<fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.example.mymemory.fragments.AddMemoryFragment"
-        android:id="@+id/quoteFragment"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+<FrameLayout
+    android:id="@+id/add_edit_memory_fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
+</LinearLayout>
