--- a/MyMemory/app/src/main/res/layout/memory_list_content.xml
+++ b/MyMemory/app/src/main/res/layout/memory_list_content.xml
@@ -11,15 +11,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/date"
+            android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            tools:text="@tools:sample/full_names"/>
+            tools:text="@tools:sample/lorem/random"/>
 
     <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_toStartOf="@id/title"
             android:ellipsize="end"
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
