--- a/MyMemory/app/src/main/res/layout-w900dp/activity_main.xml
+++ b/MyMemory/app/src/main/res/layout-w900dp/activity_main.xml
@@ -11,11 +11,11 @@
      -->
     <Button
             android:text="@string/create_memory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="75dp"
             android:id="@+id/createMemoryBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="128dp" app:layout_constraintTop_toTopOf="parent"
             android:onClick="launchAddEditMemoryActivity"/>
     <!--
@@ -23,11 +23,11 @@
      -->
     <Button
             android:text="@string/memories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/findMemoryBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_width="200dp"
+            android:layout_height="75dp"
+            android:id="@+id/findMemoryBtn" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:layout_marginTop="52dp"
+            android:layout_marginTop="52dp"
             app:layout_constraintTop_toBottomOf="@+id/createMemoryBtn" app:layout_constraintHorizontal_bias="0.498"
             android:onClick="launchMemoryListActivity"/>
     <!--
@@ -35,11 +35,11 @@
      -->
     <Button
             android:text="@string/quote"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quoteBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_width="200dp"
+            android:layout_height="75dp"
+            android:id="@+id/quoteBtn" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp" android:layout_marginTop="52dp"
+            android:layout_marginTop="52dp"
             app:layout_constraintTop_toBottomOf="@+id/findMemoryBtn" app:layout_constraintHorizontal_bias="0.498"
             android:onClick="launchQuoteActivity"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
