--- a/MyMemory/app/src/main/res/layout-w900dp/fragment_quote.xml
+++ b/MyMemory/app/src/main/res/layout-w900dp/fragment_quote.xml
@@ -22,6 +22,7 @@
             android:layout_centerInParent="true"
             android:layout_gravity="center_vertical"
             android:gravity="center"
+            android:textSize="25sp"
             android:id="@+id/quoteTxt"/>
 
 </RelativeLayout>
