--- a/MyMemory/app/src/main/res/layout-w900dp/activity_quote.xml
+++ b/MyMemory/app/src/main/res/layout-w900dp/activity_quote.xml
@@ -18,5 +18,6 @@
             android:layout_height="75dp"
             android:id="@+id/backToMainBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent" android:onClick="launchMainActivity"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
